# photoframebuffer

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
development/: build.sh  deploy.sh
pfb/: framebuffer.py
pfb/entrypoints/: show.py  slideshow.py
tests/: test_framebuffer.py  test_show.py  test_slideshow.py
