[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photoframebuffer"
version = "0.1.0"
description = "Display photos on a Linux framebuffer device"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.scripts]
pfb_slideshow = "pfb.entrypoints.slideshow:main"
pfb_show = "pfb.entrypoints.show:main"
